--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,3 +1,8 @@
+:root {
+  --font-size : 300%;
+
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
